add strava connection

--- a/VirtualRun/templates/dashboard.html
+++ b/VirtualRun/templates/dashboard.html
@@ -5,14 +5,14 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  <br><br><br><br>
+  <br><br><br><br><br>
   <div>Hi {{ user.username }}!</div>
   <p>
-    Dashboard VirtualRun<br><br>
+    Ini adalah <strong>Dashboard</strong> VirtualRun<br><br>
     Klik Tombol <strong>Connect</strong> untuk bisa melakukan koneksi dengan Strava terlebih dahulu untuk bisa melihat data aktivitas Anda.
   </p>
 
-  <a href="https://www.strava.com/oauth/authorize?client_id=75955&redirect_uri=http://localhost&response_type=code&scope=activity:read_all" class="btn btn-primary btn-lg" role="button" aria-disabled="true">Connect</a>
+  <a href="https://www.strava.com/oauth/authorize?client_id=75955&redirect_uri=http://6760-103-121-18-7.ngrok.io/authstrava&response_type=code&scope=activity:read_all" class="btn btn-primary btn-lg" role="button" aria-disabled="true">Connect</a>
 
 {% else %}
   <p>You are not logged in</p>
